// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`btree_index.sql > line 13 1`] = `
[
  "CREATE TABLE bt_name_heap (
	seqno 		name,
	random 		int4
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "bt_name_heap",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "seqno",
                  "is_local": true,
                  "location": 29,
                  "typeName": {
                    "location": 37,
                    "names": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "random",
                  "is_local": true,
                  "location": 44,
                  "typeName": {
                    "location": 53,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 18 1`] = `
[
  "CREATE TABLE bt_txt_heap (
	seqno 		text,
	random 		int4
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "bt_txt_heap",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "seqno",
                  "is_local": true,
                  "location": 28,
                  "typeName": {
                    "location": 36,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "random",
                  "is_local": true,
                  "location": 43,
                  "typeName": {
                    "location": 52,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 23 1`] = `
[
  "CREATE TABLE bt_f8_heap (
	seqno 		float8,
	random 		int4
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "bt_f8_heap",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "seqno",
                  "is_local": true,
                  "location": 27,
                  "typeName": {
                    "location": 35,
                    "names": [
                      {
                        "String": {
                          "sval": "float8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "random",
                  "is_local": true,
                  "location": 44,
                  "typeName": {
                    "location": 53,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 40 1`] = `
[
  "ANALYZE bt_i4_heap",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 8,
                    "relname": "bt_i4_heap",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 53 1`] = `
[
  "CREATE INDEX bt_i4_index ON bt_i4_heap USING btree (seqno int4_ops)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "idxname": "bt_i4_index",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "seqno",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "opclass": [
                    {
                      "String": {
                        "sval": "int4_ops",
                      },
                    },
                  ],
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 28,
              "relname": "bt_i4_heap",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 55 1`] = `
[
  "CREATE INDEX bt_name_index ON bt_name_heap USING btree (seqno name_ops)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "idxname": "bt_name_index",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "seqno",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "opclass": [
                    {
                      "String": {
                        "sval": "name_ops",
                      },
                    },
                  ],
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 30,
              "relname": "bt_name_heap",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 57 1`] = `
[
  "CREATE INDEX bt_txt_index ON bt_txt_heap USING btree (seqno text_ops)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "idxname": "bt_txt_index",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "seqno",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "opclass": [
                    {
                      "String": {
                        "sval": "text_ops",
                      },
                    },
                  ],
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 29,
              "relname": "bt_txt_heap",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 59 1`] = `
[
  "CREATE INDEX bt_f8_index ON bt_f8_heap USING btree (seqno float8_ops)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "idxname": "bt_f8_index",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "seqno",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "opclass": [
                    {
                      "String": {
                        "sval": "float8_ops",
                      },
                    },
                  ],
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 28,
              "relname": "bt_f8_heap",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 69 1`] = `
[
  "SELECT b.*
   FROM bt_i4_heap b
   WHERE b.seqno >= 9999",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "b",
                  },
                  "inh": true,
                  "location": 19,
                  "relname": "bt_i4_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                      {
                        "String": {
                          "sval": "seqno",
                        },
                      },
                    ],
                    "location": 41,
                  },
                },
                "location": 49,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 9999,
                    },
                    "location": 52,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 73 1`] = `
[
  "SELECT b.*
   FROM bt_i4_heap b
   WHERE b.seqno = 4500",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "b",
                  },
                  "inh": true,
                  "location": 19,
                  "relname": "bt_i4_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                      {
                        "String": {
                          "sval": "seqno",
                        },
                      },
                    ],
                    "location": 41,
                  },
                },
                "location": 49,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 4500,
                    },
                    "location": 51,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 77 1`] = `
[
  "SELECT b.*
   FROM bt_name_heap b
   WHERE b.seqno < '1'::name",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "b",
                  },
                  "inh": true,
                  "location": 19,
                  "relname": "bt_name_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                      {
                        "String": {
                          "sval": "seqno",
                        },
                      },
                    ],
                    "location": 43,
                  },
                },
                "location": 51,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 53,
                        "sval": {
                          "sval": "1",
                        },
                      },
                    },
                    "location": 56,
                    "typeName": {
                      "location": 58,
                      "names": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 81 1`] = `
[
  "SELECT b.*
   FROM bt_name_heap b
   WHERE b.seqno >= '9999'::name",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "b",
                  },
                  "inh": true,
                  "location": 19,
                  "relname": "bt_name_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                      {
                        "String": {
                          "sval": "seqno",
                        },
                      },
                    ],
                    "location": 43,
                  },
                },
                "location": 51,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 54,
                        "sval": {
                          "sval": "9999",
                        },
                      },
                    },
                    "location": 60,
                    "typeName": {
                      "location": 62,
                      "names": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 85 1`] = `
[
  "SELECT b.*
   FROM bt_name_heap b
   WHERE b.seqno = '4500'::name",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "b",
                  },
                  "inh": true,
                  "location": 19,
                  "relname": "bt_name_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                      {
                        "String": {
                          "sval": "seqno",
                        },
                      },
                    ],
                    "location": 43,
                  },
                },
                "location": 51,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 53,
                        "sval": {
                          "sval": "4500",
                        },
                      },
                    },
                    "location": 59,
                    "typeName": {
                      "location": 61,
                      "names": [
                        {
                          "String": {
                            "sval": "name",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 89 1`] = `
[
  "SELECT b.*
   FROM bt_txt_heap b
   WHERE b.seqno < '1'::text",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "b",
                  },
                  "inh": true,
                  "location": 19,
                  "relname": "bt_txt_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                      {
                        "String": {
                          "sval": "seqno",
                        },
                      },
                    ],
                    "location": 42,
                  },
                },
                "location": 50,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 52,
                        "sval": {
                          "sval": "1",
                        },
                      },
                    },
                    "location": 55,
                    "typeName": {
                      "location": 57,
                      "names": [
                        {
                          "String": {
                            "sval": "text",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 93 1`] = `
[
  "SELECT b.*
   FROM bt_txt_heap b
   WHERE b.seqno >= '9999'::text",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "b",
                  },
                  "inh": true,
                  "location": 19,
                  "relname": "bt_txt_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                      {
                        "String": {
                          "sval": "seqno",
                        },
                      },
                    ],
                    "location": 42,
                  },
                },
                "location": 50,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 53,
                        "sval": {
                          "sval": "9999",
                        },
                      },
                    },
                    "location": 59,
                    "typeName": {
                      "location": 61,
                      "names": [
                        {
                          "String": {
                            "sval": "text",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 97 1`] = `
[
  "SELECT b.*
   FROM bt_txt_heap b
   WHERE b.seqno = '4500'::text",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "b",
                  },
                  "inh": true,
                  "location": 19,
                  "relname": "bt_txt_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                      {
                        "String": {
                          "sval": "seqno",
                        },
                      },
                    ],
                    "location": 42,
                  },
                },
                "location": 50,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 52,
                        "sval": {
                          "sval": "4500",
                        },
                      },
                    },
                    "location": 58,
                    "typeName": {
                      "location": 60,
                      "names": [
                        {
                          "String": {
                            "sval": "text",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 101 1`] = `
[
  "SELECT b.*
   FROM bt_f8_heap b
   WHERE b.seqno < '1'::float8",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "b",
                  },
                  "inh": true,
                  "location": 19,
                  "relname": "bt_f8_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                      {
                        "String": {
                          "sval": "seqno",
                        },
                      },
                    ],
                    "location": 41,
                  },
                },
                "location": 49,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 51,
                        "sval": {
                          "sval": "1",
                        },
                      },
                    },
                    "location": 54,
                    "typeName": {
                      "location": 56,
                      "names": [
                        {
                          "String": {
                            "sval": "float8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 105 1`] = `
[
  "SELECT b.*
   FROM bt_f8_heap b
   WHERE b.seqno >= '9999'::float8",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "b",
                  },
                  "inh": true,
                  "location": 19,
                  "relname": "bt_f8_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                      {
                        "String": {
                          "sval": "seqno",
                        },
                      },
                    ],
                    "location": 41,
                  },
                },
                "location": 49,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 52,
                        "sval": {
                          "sval": "9999",
                        },
                      },
                    },
                    "location": 58,
                    "typeName": {
                      "location": 60,
                      "names": [
                        {
                          "String": {
                            "sval": "float8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 109 1`] = `
[
  "SELECT b.*
   FROM bt_f8_heap b
   WHERE b.seqno = '4500'::float8",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "b",
                  },
                  "inh": true,
                  "location": 19,
                  "relname": "bt_f8_heap",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                      {
                        "String": {
                          "sval": "seqno",
                        },
                      },
                    ],
                    "location": 41,
                  },
                },
                "location": 49,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 51,
                        "sval": {
                          "sval": "4500",
                        },
                      },
                    },
                    "location": 57,
                    "typeName": {
                      "location": 59,
                      "names": [
                        {
                          "String": {
                            "sval": "float8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 122 1`] = `
[
  "select proname from pg_proc where proname like E'RI\\\\_FKey%del' order by 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 20,
                  "relname": "pg_proc",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 73,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "proname",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_LIKE",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "proname",
                        },
                      },
                    ],
                    "location": 34,
                  },
                },
                "location": 42,
                "name": [
                  {
                    "String": {
                      "sval": "~~",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 47,
                    "sval": {
                      "sval": "RI\\_FKey%del",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 125 1`] = `
[
  "select proname from pg_proc where proname ilike '00%foo' order by 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 20,
                  "relname": "pg_proc",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 66,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "proname",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_ILIKE",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "proname",
                        },
                      },
                    ],
                    "location": 34,
                  },
                },
                "location": 42,
                "name": [
                  {
                    "String": {
                      "sval": "~~*",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 48,
                    "sval": {
                      "sval": "00%foo",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 130 1`] = `
[
  "set enable_indexscan to false",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 24,
                  "sval": {
                    "sval": "false",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "enable_indexscan",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 141 1`] = `
[
  "reset enable_seqscan",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "enable_seqscan",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 151 1`] = `
[
  "explain (costs off)
select * from btree_bpchar where f1 like 'foo'",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 34,
                      "relname": "btree_bpchar",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_LIKE",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 53,
                      },
                    },
                    "location": 56,
                    "name": [
                      {
                        "String": {
                          "sval": "~~",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 61,
                        "sval": {
                          "sval": "foo",
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 155 1`] = `
[
  "select * from btree_bpchar where f1 like 'foo%'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "btree_bpchar",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_LIKE",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 33,
                  },
                },
                "location": 36,
                "name": [
                  {
                    "String": {
                      "sval": "~~",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 41,
                    "sval": {
                      "sval": "foo%",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 158 1`] = `
[
  "explain (costs off)
select * from btree_bpchar where f1::bpchar like 'foo'",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 34,
                      "relname": "btree_bpchar",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 27,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 27,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_LIKE",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 53,
                          },
                        },
                        "location": 55,
                        "typeName": {
                          "location": 57,
                          "names": [
                            {
                              "String": {
                                "sval": "bpchar",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 64,
                    "name": [
                      {
                        "String": {
                          "sval": "~~",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 69,
                        "sval": {
                          "sval": "foo",
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 162 1`] = `
[
  "select * from btree_bpchar where f1::bpchar like 'foo%'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "btree_bpchar",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_LIKE",
                "lexpr": {
                  "TypeCast": {
                    "arg": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 33,
                      },
                    },
                    "location": 35,
                    "typeName": {
                      "location": 37,
                      "names": [
                        {
                          "String": {
                            "sval": "bpchar",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
                "location": 44,
                "name": [
                  {
                    "String": {
                      "sval": "~~",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 49,
                    "sval": {
                      "sval": "foo%",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 166 1`] = `
[
  "insert into btree_bpchar select 'foo' from generate_series(1,1500)",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "btree_bpchar",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeFunction": {
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 59,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1500,
                                        },
                                        "location": 61,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 43,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 32,
                      "val": {
                        "A_Const": {
                          "location": 32,
                          "sval": {
                            "sval": "foo",
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 171 1`] = `
[
  "CREATE TABLE dedup_unique_test_table (a int) WITH (autovacuum_enabled=false)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "autovacuum_enabled",
                  "location": 51,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "dedup_unique_test_table",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 38,
                  "typeName": {
                    "location": 40,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 177 1`] = `
[
  "DO $$
BEGIN
    FOR r IN 1..1350 LOOP
        DELETE FROM dedup_unique_test_table;
        INSERT INTO dedup_unique_test_table SELECT 1;
    END LOOP;
END$$",
  {
    "stmts": [
      {
        "stmt": {
          "DoStmt": {
            "args": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "
BEGIN
    FOR r IN 1..1350 LOOP
        DELETE FROM dedup_unique_test_table;
        INSERT INTO dedup_unique_test_table SELECT 1;
    END LOOP;
END",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 3,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 189 1`] = `
[
  "DROP INDEX plain_unique",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "plain_unique",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_INDEX",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 206 1`] = `
[
  "create table btree_tall_tbl(id int4, t text)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "btree_tall_tbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "id",
                  "is_local": true,
                  "location": 28,
                  "typeName": {
                    "location": 31,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "t",
                  "is_local": true,
                  "location": 37,
                  "typeName": {
                    "location": 39,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 215 1`] = `
[
  "CREATE TABLE delete_test_table (a bigint, b bigint, c bigint, d bigint)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "delete_test_table",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 32,
                  "typeName": {
                    "location": 34,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 42,
                  "typeName": {
                    "location": 44,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c",
                  "is_local": true,
                  "location": 52,
                  "typeName": {
                    "location": 54,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "d",
                  "is_local": true,
                  "location": 62,
                  "typeName": {
                    "location": 64,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int8",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 220 1`] = `
[
  "DELETE FROM delete_test_table WHERE a < 79990",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "delete_test_table",
              "relpersistence": "p",
            },
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "a",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "location": 38,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 79990,
                    },
                    "location": 40,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 230 1`] = `
[
  "INSERT INTO delete_test_table SELECT i, 1, 2, 3 FROM generate_series(1,1000) i",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "delete_test_table",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "i",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 69,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1000,
                                        },
                                        "location": 71,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 53,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 37,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "i",
                              },
                            },
                          ],
                          "location": 37,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 40,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 40,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 43,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 43,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 46,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 3,
                          },
                          "location": 46,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 233 1`] = `
[
  "create index on btree_tall_tbl (id int4_ops(foo=1))",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "id",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "opclass": [
                    {
                      "String": {
                        "sval": "int4_ops",
                      },
                    },
                  ],
                  "opclassopts": [
                    {
                      "DefElem": {
                        "arg": {
                          "Integer": {
                            "ival": 1,
                          },
                        },
                        "defaction": "DEFELEM_UNSPEC",
                        "defname": "foo",
                        "location": 44,
                      },
                    },
                  ],
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 16,
              "relname": "btree_tall_tbl",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 237 1`] = `
[
  "CREATE INDEX btree_tall_idx2 ON btree_tall_tbl (id)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "idxname": "btree_tall_idx2",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "id",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 32,
              "relname": "btree_tall_tbl",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`btree_index.sql > line 241 1`] = `
[
  "CREATE TABLE btree_part (id int4) PARTITION BY RANGE (id)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "partspec": {
              "location": 34,
              "partParams": [
                {
                  "PartitionElem": {
                    "location": 54,
                    "name": "id",
                  },
                },
              ],
              "strategy": "PARTITION_STRATEGY_RANGE",
            },
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "btree_part",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "id",
                  "is_local": true,
                  "location": 25,
                  "typeName": {
                    "location": 28,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
